2005-12-27 23:00  hjanuschka

	* bartlby.cfg, perf/bartlby_load, src/check.c: [no log message]

2005-12-26 00:01  hjanuschka

	* bartlby.cfg, perf/bartlby_load, src/check.c, src/client/agent.c:
	  stress testing with RRD perf fixes

2005-12-25 13:55  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, perf/bartlby_load,
	  src/check.c, src/sched.c, src/libs/mysql.c: service_check_timeout
	  is dynamic now

2005-12-25 01:53  hjanuschka

	* bartlby.cfg, perf/bartlby_load: perf fixes (path to rrd tool via
	  cfg file), trigger gets BARTLBY_CONFIG

2005-12-25 01:38  hjanuschka

	* bartlby.cfg, perf/bartlby_load, src/check.c: perf_trigger:
	  BARTLBY_CONFIG env set	       sample (bartlby_load)
	  RRD+graph sample performance trigger

2005-12-25 01:30  hjanuschka

	* src/check.c: perf trigger: envs, BARTLBY_CURR_HOST,
	  BARTLBY_CURR_SERVICE, BARTLBY_CURR_PLUGIN set right before
	  trigger is executed

2005-12-24 18:53  hjanuschka

	* ChangeLog, bartlby.cfg, src/check.c, src/client/agent.c:
	  performance interface i.e: for adding RRD tools or something like
	  that

2005-12-14 00:17  hjanuschka

	* bartlby.cfg, include/bartlby.h, src/bartlby.c, src/daemon.c,
	  src/libs/mysql.c: setuid before creating shm segment

2005-11-27 03:04  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/check.c,
	  src/daemon.c, src/trigger.c, src/libs/mysql.c: setuid/setgid for
	  security and web ui

2005-11-17 00:51  hjanuschka

	* ChangeLog, bartlby.cfg, include/bartlby.h, src/bartlby.c,
	  src/check.c: version bump 0.9.9a (Exusiai) replication tests
	  minor fixes

2005-10-25 22:36  hjanuschka

	* ChangeLog, bartlby.cfg, src/bartlby.c, src/check.c,
	  src/replication.c: startup time is'nt reset on cfg reload now

2005-10-14 00:42  hjanuschka

	* ChangeLog, src/client/cmd.c, src/client/portier.c: portier/cmd:
	  get_services -> recieve a list of passive services

2005-10-14 00:13  hjanuschka

	* ChangeLog, bartlby.cfg, src/check.c, src/sched.c, src/trigger.c: