@@ -1,48 +1,5 @@
-###############################################################
-# Core
-###############################################################
-#
-#
-#
-#  data_library = <STRING>
-#	Specifies the Path to the Data Loading Shared Object
-#
-#  max_concurent_checks = <STRING>                                         
-#	how many checks should run parallel
-#
-#  shm_key = <STRING>                                         
-#	Dir Name for SHM actions (needs only be change if you 
-#	want more instances of bartlby running
-#   
-# shm_size = <INTEGER>
-# 	Size of the Shared Memory Segment
-#
-#
-# trigger_dir = <STRING>
-# 	Path to the Directory where your triggers are in
-#
-# 
-# base_dir = <STRING>
-# 	The base dir ($BARTLBY_HOME)
-#
-# user = <STRING>
-# 	As wich user should bartlby run?
-#
-# logfile = <STRING>
-# 	Where to Log ( The date will be apended as i.e.: LOGFILE.2005.12.28
-#
-# daemon = <BOOLEAN>
-# 	Run as Daemon? otherwise foreground process (for debugging purpose)
-#
-# performance_dir = <STRING>
-# 	Path to the Directory where your performance plugins are in
-#
-# pidfile_dir = <STRING>
-# 	In wich directory should the pidfile be stored
-#
-#
-###############################################################
 
+core_performance=/storage/SF.NET/BARTLBY/bartlby-core/bartlby.cperf
 data_library=/storage/SF.NET/BARTLBY/bartlby-core/mysql.so
 max_concurent_checks=15
 shm_key=/var/tmp/
@@ -56,26 +13,7 @@ performance_dir=/storage/SF.NET/BARTLBY/bartlby-core/perf/
 pidfile_dir=/var/run/
 
 
-###############################################################
-# Data Library specific configuration
-###############################################################
 
-###############################################################
-# MYSQL Loader
-###############################################################
-#
-#
-#   mysql_host = <STRING>
-#       The Mysql Host i.e: localhost
-#   
-#  mysql_user = <STRING>
-#	The Mysql User
-#
-#  mysql_pw = <STRING>
-#	The Password of the Mysql User
-#
-#  mysql_db = <STRING>
-#	Mysql DB i.e: bartlby
 
 mysql_host=localhost
 mysql_user=root
@@ -83,62 +21,13 @@ mysql_pw=fuck7me2
 mysql_db=poseidon
 
 
-###############################################################
-# Agent/Portier Stuff
-###############################################################
-#
-#  agent_plugin_dir = <STRING>
-#	In wich directory your plugins are
-#
-#  allowed_ips = <COMMA SEPERATED LIST>
-#	Commaseperated list of IP adresses wich
-#	are allowed to connect to the agent/portier
-#
-#  agent_load_limit = <INTEGER>
-#	if the load on agent host reaches this value 
-#	futher checks will be skipped and WARNING is generated
-#	this is usefuell i.e: at a load of 200 it maybe the
-#	final punch in the face of the server if there are
-#	getting startet lots of plugins
-#
-###############################################################
 
 agent_plugin_dir=/storage/SF.NET/BARTLBY/bartlby-plugins
 allowed_ips=127.0.0.1,192.168.2.228
 agent_load_limit=50
 
 
-###############################################################
-# Trigger
-###############################################################
-#  
-#  ---------------------------------------------
-# |           For Jabber.sh Trigger             |
-#  ---------------------------------------------
-#  jabber_host = <STRING>
-#	Your jabber host
-#
-#  jabber_from = <STRING>
-#	Jabber user who sends the messages
-#
-#  jabber_pass = <INTEGER>
-#	Password for the Jabber user, sending the msg's
-#
-#  jabber_<BARTLBY USER>=klewan@bartlby.sourceforge.net
-#	Normaly triggers are send to <BARTLBY_USER>@<jabber_host>
-#       the reciever nick can be overwritten with 
-# 	this special variable(s)
-#
-#
-#  ---------------------------------------------
-# |           For icq.sh Trigger                |
-#  ---------------------------------------------
-#
-#
-#  licq_fifo = <STRING>
-#	Path to the LICQ fifo (threw wich msg's are send
-#
-###############################################################
+
 
 jabber_host=dev.januschka.com
 jabber_from=bartlby
@@ -146,33 +35,7 @@ jabber_pass=123
 jabber_hjanuschka=klewan@dev.januschka.com
 licq_fifo=/root/.licq/licq_fifo
 
-###############################################################
-# Replication
-###############################################################
-#
-#  replication = <BOOLEAN>
-#	Enable Replication
-#
-#  replicate_cnt = <INTEGER>
-#	How many hosts do you have
-#
-#  replicate[INDEX] = <STRING>
-#	INDEX starts at 1 :-)
-# 	Ip address of host (where hopefully bartlby-portier is running)
-#	where to replicate
-#
-#  i_am_a_slave = <STRING>
-#	Specifie the path to the dumped File recieved via portier
-#	if this option is set you setup is running in SLAVE mode
-#	you cannot add/remove/modify anything threw website
-#	there is no write-back support
-#	but you can build a new database out of this file
-#	so in case anything big crashes into your server room 
-#	you can get a new bartlby setup active within minutes 
-#	* ( expects you have setup replication to another server room wich location is still fine ;) )
-#	
-#
-###############################################################
+
 
 replication=false
 replicate_cnt=3
@@ -181,54 +44,14 @@ replication_intervall=3600;
 xi_am_a_slave=/usr/local/bartlby/bartlby.shm.repl
 
 
-###############################################################
-# RRD / Performance Triggers
-###############################################################
-#
-#  performance_rrd_htdocs = <INTEGER>
-#	The performance Trigger should use This dir to 
-#	store user reachable content
-#
-#
-#  rrd_tool = <INTEGER>
-#	Where is the RRDTool on this Host
-#	This is not required, just if you plan to use RRD Graphs
-#	* http://people.ee.ethz.ch/~oetiker/webtools/rrdtool/
-#
-###############################################################
+
 
 
 performance_rrd_htdocs=/var/www/htdocs/rrd/
 rrd_tool=/usr/local/rrdtool/bin/rrdtool
 
 
-###############################################################
-# Special UI Addons
-#	In case you are using graphs or any other 
-#	performance trigger like stuff
-#	you mostly have extern stuff to include in bartlby
-#	i.e: PNG graphic, Link to a report etc...
-#	The get displayed in service_detail and on servic overview in a flap menu	
-#
-#	<SERVICE_ID> should be replaced with service_id (referer service_detail in UI)
-#	
-#
-#
-#   special_addon_<SERVICE_ID>_cnt=<INTEGER>
-#	How many addons does given service have? (Starts at 1 not at 0)
-#
-#   special_addon_ui_<SERVICE_ID>_[INDEX]_name=<STRING>
-#	INDEX starts at 1 and should be incremented by one
-#	sets the name for this addon
-#
-#   special_addon_ui_<SERVICE_ID>_[INDEX]=<STRING>
-#	HTML piece of the addon
-#	NOTE: if you want to use a equal sign "=" use a "!" instead
-#	e.g.: <img src^http://dev.klewan.at/rrd/2559_bartlby_load.png > 
-#	results in: <img src=http://dev.klewan.at/rrd/2559_bartlby_load.png >
-#
-#
-###############################################################
+
 
 special_addon_ui_2559_cnt=2
 special_addon_ui_2559_[1]_name=Load Graph Last 24 Hours
