@@ -1,3 +1,8 @@
+2005-12-28 22:40  hjanuschka
+
+	* ChangeLog, bartlby.cfg: inline documentation of each variable in
+	  config file
+
 2005-12-27 23:00  hjanuschka
 
 	* bartlby.cfg, perf/bartlby_load, src/check.c: [no log message]
